--- a/.editorconfig
+++ b/.editorconfig
@@ -443,3 +443,5 @@ dotnet_diagnostic.CA1001.severity = warning
 dotnet_diagnostic.CA1200.severity = suggestion
 dotnet_diagnostic.CA1309.severity = warning
 dotnet_diagnostic.CA1805.severity = warning
+csharp_style_prefer_method_group_conversion = true:silent
+csharp_style_prefer_top_level_statements = true:silent
